--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
 }
-
-.mainContainer {
-  width: "100vw";
-  height: "100vh";
-  display: "flex";
-  justify-content: "center";
-  align-items: "center";
-  box-sizing: "border-box";
+#root {
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  overflow-y: hidden;
 }
